# UpModule

./: CMakeLists.txt  Common.cpp  Common.h  ElfModify.cpp  ElfModify.h  ElfPtrs.cpp  ElfPtrs.h  ElfSymInfos.cpp  ElfSymInfos.h  ErrorLog.cpp  ExistingModInfo.cpp  ExistingModInfo.h  KSymInfos.cpp  KSymInfos.h  README.md  main.cpp
TestModify/: Module.symvers
TryMotify/: x1  x3
TryMotify/dbg/: HELLO.ko.1  HELLO.ko.2  h1  h2
TryMotify/ndbg/: HELLO.ko.1  HELLO.ko.2  h1  h2  x1  x2
k/ak/: dumpimage  ninfo
k/ak/ub/: data.tar  data.tar.zst  u-boot-tools_2022.01+dfsg-2ubuntu2.6_amd64.deb
